--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
-language: cpp
+language: c
 
 matrix:
   include:
     - os: linux
       dist: trusty
-      sudo: required
       env: BUILD_MODE=Debug
     - os: linux
       dist: trusty
-      sudo: required
       env: BUILD_MODE=RelWithDebInfo
     - os: linux
       dist: trusty
-      sudo: required
       env: BUILD_MODE=Release
     - os: osx
       env: BUILD_MODE=Debug
@@ -21,6 +18,5 @@ matrix:
     - os: osx
       env: BUILD_MODE=Release
 
-install: ./.travis_install.sh
 script:
     - ./.travis_build_and_deploy.sh
